@@ -1,1 +1,2 @@
 doc/dbus.devhelp
+debian/libdbus-1-dev.install
