@@ -8,7 +8,7 @@ Uploaders: Sjoerd Simons <sjoerd@debian.org>,
            Loic Minier <lool@dooz.org>,
            Simon McVittie <smcv@debian.org>
 Build-Depends: autotools-dev,
-               debhelper (>= 8),
+               debhelper (>= 8.1.3),
                dh-autoreconf,
                doxygen,
                dpkg-dev (>= 1.16.0~ubuntu4),
@@ -69,6 +69,8 @@ Description: simple interprocess messaging system (X11 deps)
 
 Package: libdbus-1-3
 Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends},
          ${misc:Depends}
 Breaks: kdebase-workspace-bin (<< 4:4.4.5-9),
@@ -108,6 +110,7 @@ Description: simple interprocess messaging system (documentation)
 Package: libdbus-1-dev
 Section: libdevel
 Architecture: any
+Pre-Depends: ${misc:Pre-Depends}
 Depends: libdbus-1-3 (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends},
