@@ -1,1 +1,1 @@
-debian/tmp/usr/lib/libdbus-1*.so.* lib/
+debian/tmp/lib/*/libdbus-1*.so.*
