@@ -1,4 +1,0 @@
-debian/tmp/usr/include/dbus*/dbus/dbus*.h
-debian/tmp/usr/lib/dbus*/include/dbus/dbus*.h
-debian/tmp/usr/lib/pkgconfig/dbus-1.pc
-debian/tmp/usr/lib/libdbus-1*.a
