@@ -9,7 +9,7 @@
 
 libdbusN := $(shell sed -rn 's/Package:[[:space:]]*(libdbus-[0-9-]+)[[:space:]]*$$/\1/p' debian/control | head -n 1)
 
-multiarch := $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+DEB_HOST_MULTIARCH := $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 cflags := $(shell dpkg-buildflags --get CFLAGS)
 ldflags := $(shell dpkg-buildflags --get LDFLAGS)
 ldflags += -Wl,--as-needed
@@ -32,7 +32,10 @@ override_dh_auto_configure:
 		-- \
 		$(common_configure_flags) \
 		--enable-xml-docs \
-		--enable-doxygen-docs
+		--enable-doxygen-docs \
+		--exec-prefix=/ \
+		--libexecdir=/lib/dbus-1.0 \
+		--libdir=\$${exec_prefix}/lib/$(DEB_HOST_MULTIARCH)
 	dh_auto_configure \
 		--builddirectory=build-debug \
 		-- \
@@ -43,7 +46,7 @@ override_dh_auto_configure:
 		--enable-checks \
 		--enable-tests \
 		--enable-verbose-mode \
-		--prefix=/usr/lib/$(multiarch)/dbus-1.0/debug-build
+		--prefix=/usr/lib/$(DEB_HOST_MULTIARCH)/dbus-1.0/debug-build
 
 override_dh_auto_build:
 	dh_auto_build
@@ -59,11 +62,16 @@ override_dh_auto_install:
 	make -C build-debug install-exec DESTDIR=$(CURDIR)/debian/tmp
 
 override_dh_link:
-	dh_link -plibdbus-1-dev lib/$$(basename $$(readlink debian/tmp/usr/lib/libdbus-1.so)) usr/lib/libdbus-1.so
+	dh_link -plibdbus-1-dev lib/$(DEB_HOST_MULTIARCH)/$$(basename $$(readlink debian/tmp/lib/$(DEB_HOST_MULTIARCH)/libdbus-1.so)) usr/lib/$(DEB_HOST_MULTIARCH)/libdbus-1.so
 	dh_link --remaining-packages
 
 override_dh_install:
-	dh_install -Xlibdbus-1.la --list-missing
+	rm -f debian/tmp/lib/$(DEB_HOST_MULTIARCH)/libdbus-1.la
+	sed -i -e 's@\$${exec_prefix}/lib@\$${prefix}/lib@' \
+		debian/tmp/lib/$(DEB_HOST_MULTIARCH)/pkgconfig/dbus-1.pc
+	sed -e "s@\$${DEB_HOST_MULTIARCH}@$(DEB_HOST_MULTIARCH)@g" \
+		< debian/libdbus-1-dev.install.in > debian/libdbus-1-dev.install
+	dh_install --list-missing
 	install -m 644 -D debian/dbus-Xsession debian/dbus-x11/etc/X11/Xsession.d/75dbus_dbus-launch
 
 override_dh_installinit:
